background image width set to auto, to prevent overflow.

--- a/frontend/styles/components/_box-layout.scss
+++ b/frontend/styles/components/_box-layout.scss
@@ -6,7 +6,7 @@
   background: url("/images/bg.jpg");
   background-size: cover;
   height: 100vh;
-  width: 100vw;
+  width: auto;
 
   font-size: $font-size-sm;
 }
